added logo and icons

--- a/QRCodeScanner/app/src/main/res/values/strings.xml
+++ b/QRCodeScanner/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">QRCodeScanner</string>
-    <string name="scanQR">SCAN QR CODE</string>
+    <string name="app_name">QR READER</string>
+    <string name="scanQR">ATTENDANCE MONITORING SYSTEM</string>
 </resources>
